--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "biblioteca-rest-api",
+  "type": "module",
   "version": "1.0.0",
-  "description": "Talentos Digitales | Actividad - Crear REST API",
+  "description": "API para la gestión de libros de una biblioteca",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alejandro Herrera",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
